--- a/packages/analytics-js/project.json
+++ b/packages/analytics-js/project.json
@@ -120,9 +120,7 @@
         "baseBranch": "main",
         "preset": "conventional",
         "tagPrefix": "{projectName}@",
-        "trackDeps": true,
-        "releaseAs": "prerelease",
-        "preid": "beta"
+        "trackDeps": true
       }
     },
     "github": {
