--- a/packages/sanity-suite/project.json
+++ b/packages/sanity-suite/project.json
@@ -46,9 +46,7 @@
         "baseBranch": "main",
         "preset": "conventional",
         "tagPrefix": "{projectName}@",
-        "trackDeps": true,
-        "releaseAs": "prerelease",
-        "preid": "beta"
+        "trackDeps": true
       }
     }
   }
