--- a/packages/analytics-js-integrations/package.json
+++ b/packages/analytics-js-integrations/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@rudderstack/analytics-js-integrations",
-  "version": "3.0.0-beta.26",
+  "version": "3.0.0",
   "private": true,
   "description": "RudderStack Javascript SDK device mode integrations",
   "main": "dist/npm/modern/cjs/index.js",
