chore: use github runner for publishing new releases

--- a/.github/workflows/publish-new-release.yml
+++ b/.github/workflows/publish-new-release.yml
@@ -13,7 +13,7 @@ env:
 jobs:
   release:
     name: Publish new release
-    runs-on: [self-hosted, Linux, X64]
+    runs-on: ubuntu-latest
     # only merged pull requests must trigger this job
     if: (startsWith(github.event.pull_request.head.ref, 'release/') || startsWith(github.event.pull_request.head.ref, 'hotfix-release/')) && github.event.pull_request.merged == true
 
