--- a/.github/workflows/deploy-npm.yml
+++ b/.github/workflows/deploy-npm.yml
@@ -17,7 +17,8 @@ env:
 jobs:
   deploy-tag:
     name: Deploy to NPM
-    runs-on: ubuntu-latest # this runner should not be changed due to NPM publish restrictions
+    # As we publish the NPM package with provenance, we need to only use the GitHub hosted runners
+    runs-on: ubuntu-latest
     if: startsWith(github.ref, 'refs/tags/v') || startsWith(github.ref, 'refs/heads/main') || github.event.pull_request.merged == true
 
     steps:
@@ -71,7 +72,7 @@ jobs:
           npm set //registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}
           npx nx release publish --base=${{ env.last_monorepo_version }} --head=${{ env.current_monorepo_version }}
 
-      - name: Send message to Slack channel for v3
+      - name: Send message to Slack channel
         id: slack
         uses: slackapi/slack-github-action@v1.25.0
         env:
