fix: dependency chain across all the packages and typos

--- a/packages/analytics-js-common/package.json
+++ b/packages/analytics-js-common/package.json
@@ -2,7 +2,7 @@
   "name": "@rudderstack/analytics-js-common",
   "version": "3.0.0",
   "private": true,
-  "description": "RudderStack Javascript SDK common code",
+  "description": "RudderStack JavaScript SDK common code",
   "module": "dist/npm/index.js",
   "types": "./dist/npm/index.d.ts",
   "publishConfig": {},
@@ -55,18 +55,14 @@
     "release": "npm publish"
   },
   "dependencies": {
-    "@lukeed/uuid": "2.0.1",
     "@ndhoule/defaults": "2.0.1",
-    "@preact/signals-core": "1.5.1",
-    "@segment/top-domain": "3.0.1",
-    "crypto-js": "4.2.0",
-    "get-value": "3.0.1",
-    "ramda": "0.29.1",
     "rudder-component-cookie": "0.0.1",
-    "storejs": "2.0.7",
-    "msw": "2.2.1"
+    "@segment/top-domain": "3.0.1",
+    "crypto-js": "4.2.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "@types/crypto-js": "4.2.2"
+  },
   "overrides": {},
   "browserslist": {
     "production": [
