--- a/package.json
+++ b/package.json
@@ -64,42 +64,10 @@
     "url": "https://github.com/rudderlabs/rudder-sdk-js.git"
   },
   "dependencies": {
-    "@bugsnag/js": "6.5.2",
     "@lukeed/uuid": "2.0.1",
-    "@ndhoule/defaults": "2.0.1",
-    "@ndhoule/each": "2.0.1",
-    "@ndhoule/extend": "2.0.0",
-    "@ndhoule/keys": "2.0.0",
     "@preact/signals-core": "1.5.1",
-    "@segment/localstorage-retry": "1.3.0",
-    "@segment/top-domain": "3.0.1",
-    "@vespaiach/axios-fetch-adapter": "0.3.1",
-    "assert": "2.1.0",
-    "axios": "1.6.7",
-    "axios-retry": "3.9.1",
-    "component-each": "0.2.6",
-    "component-emitter": "2.0.0",
-    "component-querystring": "2.0.1",
-    "component-url": "0.2.1",
-    "crypto-es": "2.1.0",
-    "crypto-js": "4.2.0",
-    "deep-object-diff": "1.1.9",
     "get-value": "3.0.1",
-    "is": "3.3.0",
-    "lodash.get": "4.4.2",
-    "lodash.isempty": "4.4.0",
-    "lodash.isequal": "4.5.0",
-    "lodash.isundefined": "3.0.1",
-    "lodash.pickby": "4.6.0",
-    "lodash.tostring": "4.1.4",
-    "md5": "2.3.0",
-    "ms": "2.1.3",
-    "obj-case": "0.2.1",
-    "object-path": "0.11.8",
-    "on-body": "0.0.1",
     "ramda": "0.29.1",
-    "rudder-component-cookie": "0.0.1",
-    "serialize-javascript": "6.0.2",
     "storejs": "2.0.7"
   },
   "devDependencies": {
@@ -133,19 +101,13 @@
     "@size-limit/file": "11.0.2",
     "@size-limit/webpack": "11.0.2",
     "@types/component-emitter": "1.2.14",
-    "@types/crypto-js": "4.2.2",
     "@types/jest": "29.5.12",
-    "@types/lodash.clonedeep": "4.5.9",
-    "@types/lodash.isstring": "4.0.9",
-    "@types/ms": "0.7.34",
     "@types/node": "20.11.20",
     "@types/ramda": "0.29.10",
-    "assert": "2.1.0",
     "babel-eslint": "10.1.0",
     "babel-plugin-transform-object-hasown": "1.1.0",
     "commitizen": "4.3.0",
     "commitlint": "18.6.1",
-    "component-type": "2.0.0",
     "core-js": "3.36.0",
     "dotenv": "16.4.5",
     "each": "2.6.0",
@@ -173,7 +135,6 @@
     "jscpd": "3.5.10",
     "lint-staged": "15.2.2",
     "madge": "6.1.0",
-    "msw": "2.2.1",
     "nx": "18.0.5",
     "patch-package": "8.0.0",
     "prettier": "3.2.5",
@@ -196,7 +157,8 @@
     "ts-node": "10.9.2",
     "tslib": "2.6.2",
     "typescript": "5.2.2",
-    "user-agent-data-types": "0.4.2"
+    "user-agent-data-types": "0.4.2",
+    "msw": "2.2.1"
   },
   "optionalDependencies": {
     "@nx/nx-darwin-arm64": "18.0.5",
