--- a/packages/analytics-v1.1/package.json
+++ b/packages/analytics-v1.1/package.json
@@ -1,7 +1,7 @@
 {
   "name": "rudder-sdk-js",
   "version": "2.48.3",
-  "description": "RudderStack Javascript SDK",
+  "description": "RudderStack JavaScript SDK",
   "main": "dist/npm/index.js",
   "module": "dist/npm/index.es.js",
   "exports": {
@@ -77,20 +77,11 @@
     "directory": "packages/analytics-v1.1"
   },
   "dependencies": {
-    "msw": "2.2.1",
     "component-emitter": "2.0.0",
-    "ramda": "0.29.1",
-    "get-value": "3.0.1",
     "@segment/localstorage-retry": "1.3.0",
-    "@lukeed/uuid": "2.0.1"
+    "@rudderstack/analytics-js-common": "*"
   },
-  "devDependencies": {
-    "@lukeed/uuid": "2.0.1",
-    "@rudderstack/analytics-js-common": "*",
-    "@segment/localstorage-retry": "1.3.0",
-    "get-value": "3.0.1",
-    "ramda": "0.29.1"
-  },
+  "devDependencies": {},
   "overrides": {},
   "browserslist": {
     "production": [
