--- a/packages/analytics-js/package.json
+++ b/packages/analytics-js/package.json
@@ -27,6 +27,13 @@
     }
   },
   "types": "./dist/npm/index.d.ts",
+  "typesVersions": {
+    "*": {
+      "*": [
+        "./dist/npm/index.d.ts"
+      ]
+    }
+  },
   "publishConfig": {
     "access": "public"
   },
