--- a/.github/workflows/publish-new-release.yml
+++ b/.github/workflows/publish-new-release.yml
@@ -13,6 +13,7 @@ env:
 jobs:
   release:
     name: Publish new release
+    # For publishing GitHub release, we need to only use the GitHub hosted runners
     runs-on: ubuntu-latest
     # only merged pull requests must trigger this job
     if: (startsWith(github.event.pull_request.head.ref, 'release/') || startsWith(github.event.pull_request.head.ref, 'hotfix-release/')) && github.event.pull_request.merged == true
