fix: move analytics common pkg to dev dependencies

--- a/packages/analytics-js-integrations/package.json
+++ b/packages/analytics-js-integrations/package.json
@@ -85,7 +85,6 @@
     "build:integration:all:bundle-size:modern": "VISUALIZER=true npm run build:integration:all:modern"
   },
   "dependencies": {
-    "@rudderstack/analytics-js-common": "*",
     "@ndhoule/each": "2.0.1",
     "lodash.get": "4.4.2",
     "lodash.isequal": "4.5.0",
@@ -101,7 +100,9 @@
     "lodash.pickby": "4.6.0",
     "lodash.tostring": "4.1.4"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "@rudderstack/analytics-js-common": "*"
+  },
   "overrides": {},
   "browserslist": {
     "production": [
