--- a/packages/analytics-v1.1/package.json
+++ b/packages/analytics-v1.1/package.json
@@ -78,10 +78,11 @@
   },
   "dependencies": {
     "component-emitter": "2.0.0",
-    "@segment/localstorage-retry": "1.3.0",
+    "@segment/localstorage-retry": "1.3.0"
+  },
+  "devDependencies": {
     "@rudderstack/analytics-js-common": "*"
   },
-  "devDependencies": {},
   "overrides": {},
   "browserslist": {
     "production": [
