--- a/examples/gatsby/sample-gatsby-site/package.json
+++ b/examples/gatsby/sample-gatsby-site/package.json
@@ -16,16 +16,16 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "gatsby": "^5.12.4",
+    "@rudderstack/analytics-js": "*",
+    "gatsby": "^5.13.4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "@rudderstack/analytics-js": "*"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@types/node": "^20.3.3",
-    "@types/react": "^18.2.14",
-    "@types/react-dom": "^18.2.6",
-    "typescript": "^5.1.6"
+    "@types/node": "^20.12.7",
+    "@types/react": "^18.2.79",
+    "@types/react-dom": "^18.2.25",
+    "typescript": "^5.4.5"
   },
   "overrides": {
     "@babel/traverse": "7.23.2",
