--- a/packages/analytics-js-integrations/package.json
+++ b/packages/analytics-js-integrations/package.json
@@ -85,23 +85,16 @@
     "build:integration:all:bundle-size:modern": "VISUALIZER=true npm run build:integration:all:modern"
   },
   "dependencies": {
-    "@rudderstack/analytics-js-common": "*",
     "@ndhoule/each": "2.0.1",
-    "lodash.get": "4.4.2",
-    "lodash.isequal": "4.5.0",
-    "obj-case": "0.2.1",
-    "on-body": "0.0.1",
-    "md5": "2.3.0",
+    "@ndhoule/extend": "2.0.0",
+    "@rudderstack/analytics-js-common": "*",
+    "component-each": "0.2.6",
     "crypto-js": "4.2.0",
     "is": "3.3.0",
-    "component-each": "0.2.6",
-    "@ndhoule/extend": "2.0.0",
-    "lodash.isundefined": "3.0.1",
-    "lodash.isempty": "4.4.0",
-    "lodash.pickby": "4.6.0",
-    "lodash.tostring": "4.1.4"
+    "md5": "2.3.0",
+    "obj-case": "0.2.1",
+    "on-body": "0.0.1"
   },
-  "devDependencies": {},
   "overrides": {},
   "browserslist": {
     "production": [
