--- a/packages/sanity-suite/__fixtures__/sourceConfigDMT1.json
+++ b/packages/sanity-suite/__fixtures__/sourceConfigDMT1.json
@@ -15,7 +15,6 @@
     },
     "enabled": true,
     "workspaceId": "1xXCSVsmPjqFKhRlpajnDXkGwYX",
-    "sourceDefinitionId": "1TW48i2bIzEl1HPf825cEznfIM8",
     "destinations": [
       {
         "id": "20Pa0T3VoQZZYPgh5LQS2vuwg3N",
@@ -84,164 +83,8 @@
         },
         "destinationDefinitionId": "1QGzO4fWSyq3lsyFHf4eQAMDSr9",
         "destinationDefinition": {
-          "id": "1QGzO4fWSyq3lsyFHf4eQAMDSr9",
           "name": "AM",
-          "displayName": "Amplitude",
-          "createdAt": "2019-09-02T08:08:05.613Z",
-          "updatedAt": "2023-12-14T08:23:40.261Z",
-          "config": {
-            "destConfig": {
-              "ios": [
-                "eventUploadPeriodMillis",
-                "eventUploadThreshold",
-                "useNativeSDK",
-                "connectionMode",
-                "trackSessionEvents",
-                "useIdfaAsDeviceId"
-              ],
-              "web": [
-                "useNativeSDK",
-                "connectionMode",
-                "preferAnonymousIdForDeviceId",
-                "attribution",
-                "eventUploadThreshold",
-                "eventUploadPeriodMillis",
-                "trackNewCampaigns"
-              ],
-              "android": [
-                "eventUploadPeriodMillis",
-                "eventUploadThreshold",
-                "useNativeSDK",
-                "connectionMode",
-                "enableLocationListening",
-                "trackSessionEvents",
-                "useAdvertisingIdForDeviceId"
-              ],
-              "flutter": [
-                "eventUploadPeriodMillis",
-                "eventUploadThreshold",
-                "useNativeSDK",
-                "connectionMode",
-                "enableLocationListening",
-                "trackSessionEvents",
-                "useAdvertisingIdForDeviceId",
-                "useIdfaAsDeviceId"
-              ],
-              "reactnative": [
-                "eventUploadPeriodMillis",
-                "eventUploadThreshold",
-                "useNativeSDK",
-                "connectionMode",
-                "enableLocationListening",
-                "trackSessionEvents",
-                "useAdvertisingIdForDeviceId",
-                "useIdfaAsDeviceId"
-              ],
-              "defaultConfig": [
-                "apiKey",
-                "groupTypeTrait",
-                "groupValueTrait",
-                "trackAllPages",
-                "trackCategorizedPages",
-                "trackNamedPages",
-                "traitsToIncrement",
-                "traitsToSetOnce",
-                "traitsToAppend",
-                "traitsToPrepend",
-                "trackProductsOnce",
-                "trackRevenuePerProduct",
-                "versionName",
-                "apiSecret",
-                "residencyServer",
-                "blacklistedEvents",
-                "whitelistedEvents",
-                "eventFilteringOption",
-                "mapDeviceBrand",
-                "oneTrustCookieCategories",
-                "userProvidedPageEventString",
-                "useUserDefinedPageEventName",
-                "userProvidedScreenEventString",
-                "useUserDefinedScreenEventName"
-              ]
-            },
-            "secretKeys": ["apiKey", "apiSecret"],
-            "excludeKeys": [],
-            "includeKeys": [
-              "apiKey",
-              "groupTypeTrait",
-              "groupValueTrait",
-              "trackAllPages",
-              "trackCategorizedPages",
-              "trackNamedPages",
-              "traitsToIncrement",
-              "traitsToSetOnce",
-              "traitsToAppend",
-              "traitsToPrepend",
-              "trackProductsOnce",
-              "trackRevenuePerProduct",
-              "preferAnonymousIdForDeviceId",
-              "versionName",
-              "enableLocationListening",
-              "useAdvertisingIdForDeviceId",
-              "trackSessionEvents",
-              "useIdfaAsDeviceId",
-              "blacklistedEvents",
-              "whitelistedEvents",
-              "oneTrustCookieCategories",
-              "eventFilteringOption",
-              "mapDeviceBrand",
-              "residencyServer",
-              "userProvidedPageEventString",
-              "useUserDefinedPageEventName",
-              "attribution",
-              "eventUploadThreshold",
-              "eventUploadPeriodMillis",
-              "trackNewCampaigns",
-              "userProvidedScreenEventString",
-              "useUserDefinedScreenEventName"
-            ],
-            "transformAtV1": "processor",
-            "isAudienceSupported": false,
-            "supportedSourceTypes": [
-              "android",
-              "ios",
-              "web",
-              "unity",
-              "amp",
-              "cloud",
-              "warehouse",
-              "reactnative",
-              "flutter",
-              "cordova",
-              "shopify"
-            ],
-            "supportsVisualMapper": true,
-            "supportedMessageTypes": {
-              "cloud": ["alias", "group", "identify", "page", "screen", "track"],
-              "device": {
-                "ios": ["identify", "track", "page", "group"],
-                "web": ["identify", "track", "page", "group"],
-                "android": ["identify", "track", "page", "group"],
-                "flutter": ["identify", "track", "page", "group"],
-                "reactnative": ["identify", "track", "page", "group"]
-              }
-            },
-            "saveDestinationResponse": true,
-            "supportedConnectionModes": {
-              "amp": ["cloud"],
-              "ios": ["cloud", "device"],
-              "web": ["cloud", "device"],
-              "unity": ["cloud"],
-              "android": ["cloud", "device"],
-              "cordova": ["cloud"],
-              "flutter": ["cloud", "device"],
-              "shopify": ["cloud"],
-              "reactnative": ["cloud", "device"]
-            }
-          },
-          "responseRules": null,
-          "category": null,
-          "options": null
+          "displayName": "Amplitude"
         },
         "deleted": false,
         "createdAt": "2021-11-03T14:07:33.995Z",
@@ -301,130 +144,8 @@
         "liveEventsConfig": {},
         "destinationDefinitionId": "1QGzNyNSA4alXixnhDcq4C10ac2",
         "destinationDefinition": {
-          "id": "1QGzNyNSA4alXixnhDcq4C10ac2",
           "name": "GA",
-          "displayName": "Google Analytics",
-          "createdAt": "2019-09-02T08:08:04.178Z",
-          "updatedAt": "2023-12-14T08:23:41.909Z",
-          "config": {
-            "auth": {
-              "role": "google_analytics",
-              "type": "OAuth",
-              "provider": "Google",
-              "rudderScopes": ["delete"]
-            },
-            "destConfig": {
-              "web": [
-                "useNativeSDK",
-                "trackCategorizedPages",
-                "trackNamedPages",
-                "useRichEventNames",
-                "sampleRate",
-                "siteSpeedSampleRate",
-                "resetCustomDimensionsOnPage",
-                "setAllMappedProps",
-                "domain",
-                "optimize",
-                "useGoogleAmpClientId",
-                "namedTracker"
-              ],
-              "defaultConfig": [
-                "trackingID",
-                "rudderDeleteAccountId",
-                "customMappings",
-                "doubleClick",
-                "enhancedLinkAttribution",
-                "includeSearch",
-                "dimensions",
-                "metrics",
-                "contentGroupings",
-                "enableServerSideIdentify",
-                "serverSideIdentifyEventCategory",
-                "serverSideIdentifyEventAction",
-                "anonymizeIp",
-                "enhancedEcommerce",
-                "nonInteraction",
-                "sendUserId",
-                "disableMd5",
-                "blacklistedEvents",
-                "whitelistedEvents",
-                "eventFilteringOption",
-                "oneTrustCookieCategories",
-                "ketchConsentPurposes"
-              ]
-            },
-            "secretKeys": [],
-            "excludeKeys": [],
-            "includeKeys": [
-              "trackingID",
-              "doubleClick",
-              "enhancedLinkAttribution",
-              "includeSearch",
-              "trackCategorizedPages",
-              "trackNamedPages",
-              "useRichEventNames",
-              "sampleRate",
-              "siteSpeedSampleRate",
-              "dimensions",
-              "metrics",
-              "resetCustomDimensionsOnPage",
-              "setAllMappedProps",
-              "contentGroupings",
-              "anonymizeIp",
-              "domain",
-              "enhancedEcommerce",
-              "nonInteraction",
-              "optimize",
-              "sendUserId",
-              "useGoogleAmpClientId",
-              "namedTracker",
-              "blacklistedEvents",
-              "whitelistedEvents",
-              "oneTrustCookieCategories",
-              "eventFilteringOption",
-              "ketchConsentPurposes"
-            ],
-            "transformAtV1": "processor",
-            "isAudienceSupported": false,
-            "supportedSourceTypes": [
-              "android",
-              "ios",
-              "web",
-              "unity",
-              "amp",
-              "cloud",
-              "warehouse",
-              "reactnative",
-              "flutter",
-              "cordova",
-              "shopify"
-            ],
-            "supportsVisualMapper": true,
-            "supportedMessageTypes": {
-              "cloud": ["identify", "page", "screen", "track"],
-              "device": {
-                "web": ["track", "page"]
-              }
-            },
-            "saveDestinationResponse": false,
-            "supportedConnectionModes": {
-              "amp": ["cloud"],
-              "ios": ["cloud"],
-              "web": ["cloud", "device"],
-              "unity": ["cloud"],
-              "android": ["cloud"],
-              "cordova": ["cloud"],
-              "flutter": ["cloud"],
-              "shopify": ["cloud"],
-              "reactnative": ["cloud"]
-            }
-          },
-          "responseRules": null,
-          "category": null,
-          "options": {
-            "deprecated": true,
-            "deprecationLabel": "Google sunsetted Google Analytics (UA). Please set up Google Analytics 4 instead"
-          }
+          "displayName": "Google Analytics"
         },
         "deleted": false,
         "createdAt": "2022-09-29T12:38:32.756Z",
@@ -469,118 +190,8 @@
         "liveEventsConfig": {},
         "destinationDefinitionId": "1QmWaiefYgYqxl9JGUe5PQio6bx",
         "destinationDefinition": {
-          "id": "1QmWaiefYgYqxl9JGUe5PQio6bx",
           "name": "MP",
-          "displayName": "Mixpanel",
-          "createdAt": "2019-09-13T12:05:16.230Z",
-          "updatedAt": "2023-12-14T08:23:24.633Z",
-          "config": {
-            "destConfig": {
-              "web": ["useNativeSDK"],
-              "defaultConfig": [
-                "token",
-                "groupKeySettings",
-                "apiSecret",
-                "dataResidency",
-                "people",
-                "setAllTraitsByDefault",
-                "superProperties",
-                "setOnceProperties",
-                "peopleProperties",
-                "eventIncrements",
-                "propIncrements",
-                "consolidatedPageCalls",
-                "trackCategorizedPages",
-                "trackNamedPages",
-                "sourceName",
-                "crossSubdomainCookie",
-                "persistence",
-                "persistenceType",
-                "persistenceName",
-                "secureCookie",
-                "blacklistedEvents",
-                "whitelistedEvents",
-                "eventFilteringOption",
-                "useNewMapping",
-                "serviceAccountUserName",
-                "serviceAccountSecret",
-                "projectId",
-                "oneTrustCookieCategories",
-                "ketchConsentPurposes",
-                "identityMergeApi",
-                "userDeletionApi",
-                "gdprApiToken",
-                "strictMode",
-                "ignoreDnt"
-              ]
-            },
-            "secretKeys": ["token", "gdprApiToken"],
-            "excludeKeys": [],
-            "includeKeys": [
-              "token",
-              "groupKeySettings",
-              "apiSecret",
-              "dataResidency",
-              "people",
-              "setAllTraitsByDefault",
-              "superProperties",
-              "setOnceProperties",
-              "peopleProperties",
-              "eventIncrements",
-              "propIncrements",
-              "consolidatedPageCalls",
-              "trackCategorizedPages",
-              "trackNamedPages",
-              "sourceName",
-              "crossSubdomainCookie",
-              "persistence",
-              "persistenceType",
-              "persistenceName",
-              "secureCookie",
-              "blacklistedEvents",
-              "whitelistedEvents",
-              "oneTrustCookieCategories",
-              "ketchConsentPurposes",
-              "eventFilteringOption",
-              "identityMergeApi",
-              "ignoreDnt"
-            ],
-            "transformAtV1": "router",
-            "supportedSourceTypes": [
-              "android",
-              "ios",
-              "web",
-              "unity",
-              "amp",
-              "cloud",
-              "warehouse",
-              "reactnative",
-              "flutter",
-              "cordova",
-              "shopify"
-            ],
-            "supportedMessageTypes": {
-              "cloud": ["alias", "group", "identify", "page", "screen", "track"],
-              "device": {
-                "web": ["identify", "track", "page", "group", "alias"]
-              }
-            },
-            "saveDestinationResponse": true,
-            "supportedConnectionModes": {
-              "amp": ["cloud"],
-              "ios": ["cloud"],
-              "web": ["cloud", "device"],
-              "unity": ["cloud"],
-              "android": ["cloud"],
-              "cordova": ["cloud"],
-              "flutter": ["cloud"],
-              "shopify": ["cloud"],
-              "reactnative": ["cloud"]
-            }
-          },
-          "responseRules": null,
-          "category": null,
-          "options": null
+          "displayName": "Mixpanel"
         },
         "deleted": false,
         "createdAt": "2023-04-19T11:48:36.192Z",
@@ -598,19 +209,6 @@
     "liveEventsConfig": {
       "eventUpload": false,
       "eventUploadTS": 1690980174175
-    },
-    "sourceDefinition": {
-      "options": null,
-      "config": null,
-      "configSchema": null,
-      "uiConfig": null,
-      "id": "1TW48i2bIzEl1HPf825cEznfIM8",
-      "name": "Javascript",
-      "displayName": "Javascript",
-      "category": null,
-      "type": "web",
-      "createdAt": "2019-11-12T12:39:19.885Z",
-      "updatedAt": "2023-05-16T11:52:25.474Z"
     },
     "createdBy": "1xXC9Q9pYMrw0OON9Aw2AFeBsUp",
     "secretVersion": null,
