fix: sonarjs eslint config

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -44,7 +44,7 @@
         "airbnb-base",
         "airbnb-typescript/base",
         "plugin:@typescript-eslint/recommended",
-        "plugin:sonarjs/recommended",
+        "plugin:sonarjs/recommended-legacy",
         "prettier",
         "plugin:compat/recommended"
       ],
