--- a/.github/workflows/deploy-beta.yml
+++ b/.github/workflows/deploy-beta.yml
@@ -11,7 +11,7 @@ env:
   NODE_OPTIONS: "--no-warnings"
 
 jobs:
-  deploy-tag:
+  deploy:
     name: Deploy BETA/BugBash Feature
     runs-on: [self-hosted, Linux, X64]
     if: startsWith(github.ref, 'refs/heads/beta/') || startsWith(github.ref, 'refs/tags/bugbash')
