--- a/.github/workflows/rollback.yml
+++ b/.github/workflows/rollback.yml
@@ -6,7 +6,7 @@ on:
 jobs:
   deploy:
     name: Rollback production deployment
-    if: (startsWith(github.ref, 'refs/tags/v') || startsWith(github.ref, 'refs/heads/main')) && (github.actor == 'saikumarrs' || github.actor == 'MoumitaM') && (github.triggering_actor == 'saikumarrs' || github.triggering_actor == 'MoumitaM')
+    if: startsWith(github.ref, 'refs/tags/v') || startsWith(github.ref, 'refs/heads/main')
     uses: ./.github/workflows/deploy.yml
     with:
       environment: 'production'
