--- a/packages/analytics-js/package.json
+++ b/packages/analytics-js/package.json
@@ -86,8 +86,7 @@
     "check:pub": "npx publint",
     "build:modern": "npm run build:browser:modern && npm run build:npm:modern",
     "package": "npm pack",
-    "release": "npm publish",
-    "build:browser:LH": "nx run @rudderstack/analytics-js:build-browser && nx run @rudderstack/analytics-js:build-browser-modern"
+    "release": "npm publish"
   },
   "devDependencies": {
     "@rudderstack/analytics-js-common": "*",
