fix: browser test

--- a/packages/analytics-js/project.json
+++ b/packages/analytics-js/project.json
@@ -86,7 +86,8 @@
         "ci": {
           "ci": true
         }
-      }
+      },
+      "dependsOn": ["build-browser"]
     },
     "lint": {
       "executor": "@nx/eslint:lint",
