--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,13 +21,15 @@
       "Object.entries",
       "Object.values",
       "Object.assign",
+      "Object.fromEntries",
       "TextEncoder",
       "TextDecoder",
       "CustomEvent",
       "requestAnimationFrame",
       "cancelAnimationFrame",
       "navigator.sendBeacon",
-      "Uint8Array"
+      "Uint8Array",
+      "Set"
     ]
   },
   "env": {
@@ -42,7 +44,7 @@
         "airbnb-base",
         "airbnb-typescript/base",
         "plugin:@typescript-eslint/recommended",
-        "plugin:sonarjs/recommended",
+        "plugin:sonarjs/recommended-legacy",
         "prettier",
         "plugin:compat/recommended"
       ],
