--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -201,8 +201,7 @@ jobs:
                   },
                   "accessory": {
                     "type": "image",
-                    "image_url": "https://cdn.jsdelivr.net/npm/programming-languages-logos/src/javascript/javascript.png
-                    ",
+                    "image_url": "https://cdn.jsdelivr.net/npm/programming-languages-logos/src/javascript/javascript.png",
                     "alt_text": "JavaScript Icon"
                   }
                 },
